# google-advent-of-agents

./: .gitignore
Day10/advent-of-agents-spring-26/: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml  requirements.txt
Day11/manager_agent/: agent.py
Day12/gen_critic_agent/: agent.py
Day13/adk-iterative-refinement/: README.md
Day13/build-with-adk/: README.md
Day14/: requirements.txt
Day14/hitl_agent/: agent.py
Day15/: requirements.txt  vectorsearch2_travel_agent.ipynb
Day19/lens-mosaic/: .gitignore  README.md
Day19/lens-mosaic/hosted_app/: .dockerignore  Dockerfile  README.md  pyproject.toml
Day19/lens-mosaic/hosted_app/app/: main.py
Day19/lens-mosaic/hosted_app/app/certs/: openssl-san.cnf
Day19/lens-mosaic/hosted_app/app/static/: index.html
Day19/lens-mosaic/hosted_app/app/static/css/: style.css
Day19/lens-mosaic/hosted_app/app/static/js/: app.js  audio-player.js  audio-recorder.js  pcm-player-processor.js  pcm-recorder-processor.js
Day19/lens-mosaic/hosted_app/test/: .gitignore  README.md  load_test.py  model_test.py  test_search_integration.py
Day19/lens-mosaic/hosted_app/test/results/threshold/: similar-100-20s.json  similar-120-20s.json  similar-125-20s.json  similar-140-20s.json
Day2/my-agent/: GEMINI.md  README.md  pyproject.toml
Day20/: requirements.txt
Day20/github_agent/: agent.py
Day24/: batch_language_prediction.ipynb  file_utils.py  generate_data.py  requirements.txt
Day25/: Makefile  README.md  deployment_metadata.json  pyproject.toml
Day25/my_agent/: requirements.txt
Day5/: requirements.txt
(+1759 files in other folders)
