[project]
name = "advent-mm2-vs2"
version = "0.1.0"
description = "Search service using Vector Search 2.0 with Gemini Embedding 2"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "google-adk>=1.26.0",
    "python-dotenv>=1.0.0",
    "google-cloud-discoveryengine>=0.13.12,<0.14.0",
    "google-cloud-vectorsearch>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
